<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.pulselink"
            android:targetClass="com.pulselink.ui.AssistantShortcutActivity">
            <parameter
                android:name="feature"
                android:key="feature" />
        </intent>
    </capability>

    <shortcut
        android:shortcutId="emergency"
        android:enabled="true"
        android:icon="@drawable/ic_logo"
        android:shortLabel="@string/assistant_shortcut_emergency_short"
        android:longLabel="@string/assistant_shortcut_emergency_long">
        <intent
            android:action="com.pulselink.intent.ASSISTANT_EMERGENCY"
            android:targetPackage="com.pulselink"
            android:targetClass="com.pulselink.ui.AssistantShortcutActivity" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="emergency" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="check_in"
        android:enabled="true"
        android:icon="@drawable/ic_logo"
        android:shortLabel="@string/assistant_shortcut_check_in_short"
        android:longLabel="@string/assistant_shortcut_check_in_long">
        <intent
            android:action="com.pulselink.intent.ASSISTANT_CHECK_IN"
            android:targetPackage="com.pulselink"
            android:targetClass="com.pulselink.ui.AssistantShortcutActivity" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="check in" />
        </capability-binding>
    </shortcut>
</shortcuts>
